# foundationpose_ros

./: .gitignore  .run_demo_store.py.swp  README.md  Utils.py  build_all_conda.sh  estimater.py  instructions.md  offscreen_renderer.py  rename.py  requirements.txt  run_demo_store.py
bundlesdf/: nerf_runner.py  run_nerf.py
bundlesdf/mycuda/: setup.py
demo_data/unity_sim_data/: cam_K.txt  conver_matrix.py  create_video.py
demo_data/unity_sim_data/bbox/: 00000.txt
demo_data/unity_sim_data/ob_in_cam/: 00000.txt  00001.txt  00003.txt  00004.txt  00005.txt  00006.txt  00007.txt  00008.txt  00009.txt  00010.txt  00011.txt  00012.txt  00013.txt  00014.txt  00015.txt  00016.txt  00017.txt  00018.txt  (+1055 more)
learning/training/: predict_pose_refine.py
src/fp_msg/: CMakeLists.txt  package.xml
src/fp_ros/: package.xml  setup.cfg  setup.py
src/fp_ros/fp_ros/: fp_process.py  fp_process_multicam.py  publish_data.py  publish_data_multicam.py  run_demo_store.py
src/fp_ros/fp_ros/foundationpose/: Utils.py  datareader.py  estimater.py  offscreen_renderer.py
src/fp_ros/fp_ros/foundationpose/bundlesdf/: config_custom.yml  nerf_helpers.py  nerf_runner.py  run_nerf.py  tool.py
src/fp_ros/fp_ros/foundationpose/bundlesdf/mycuda/common.egg-info/: SOURCES.txt
src/fp_ros/fp_ros/foundationpose/learning/datasets/: h5_dataset.py  pose_dataset.py
src/fp_ros/fp_ros/foundationpose/learning/models/: network_modules.py  refine_network.py  score_network.py
src/fp_ros/fp_ros/foundationpose/learning/training/: predict_pose_refine.py  predict_score.py
src/fp_ros/launch/: fp_launch.py
(+1074 files in other folders)
